Exercice_1/terraform/aws/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }

  required_version = ">= 1.2.0"
}

provider "aws" {
  region  = "eu-west-3"
  profile = "terraform-user"
}

resource "aws_instance" "my_server" {
  ami = data.aws_ami.amazon_linux.id
  instance_type = "t3.micro"

  tags = {
    Name = "OpenClassrooms-EDO-P5"
  }

  vpc_security_group_ids = ["${aws_security_group.my_security_group.id}"]
  key_name               = aws_key_pair.generated_key.key_name
}

variable "my_public_ip" {
  description = "Adresse IPv4 autorisée pour SSH"
  type        = string
}

resource "aws_security_group" "my_security_group" {
  name = "allow-ssh"

  ingress {
    description = "SSH depuis mon adresse IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.my_public_ips
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP depuis mes IP autorisees"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.my_public_ips
  }
}

variable "generated_key_name" {
  type        = string
  default     = "openclassrooms_edo_p5"
  description = "Key-pair generated by Terraform"
}

resource "tls_private_key" "my_ssh_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "generated_key" {
  key_name   = var.generated_key_name
  public_key = tls_private_key.my_ssh_key.public_key_openssh
}

resource "local_sensitive_file" "pem_file" {
  filename             = pathexpand("~/.ssh/aws_${aws_key_pair.generated_key.key_name}.pem")
  file_permission      = "600"
  directory_permission = "700"

  content = tls_private_key.my_ssh_key.private_key_pem
}

data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }
}
